[package]
name = "tetable"
version = "0.1.0"
edition = "2024"

[dependencies]
alum = { version = "0.6", git = "https://github.com/ranjeethmahankali/alum/", branch = "tetable-misc-improvements" }
three-d = { version = "0.18", features = ["egui-gui"] }
rfd = "0.15"

# IMPORTANT: On Ubuntu this needs libwayland-dev to build.

# For smaller binary size.
[profile.release]
strip = true # Automatically strip symbols
panic = "abort" # Don't unwind stack.
codegen-units = 1
lto = true

[profile.release-with-debug]
inherits = "release"
strip = false # Automatically strip symbols
debug = true